2013-05-29  Vanessa Gil <vanessa.gil@artica.es>

	* operation/inventories/inventory_detail.php: Fixed bug in link
	to parent object.


2013-05-29  Vanessa Gil <vanessa.gil@artica.es>

	* operation/inventories/inventory_detail.php: Fixed bugs.

2013-05-29  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/leads/lead_detail: Fixed a bug on duplicates validation of
	name and email.

2013-05-29  Vanessa Gil <vanessa.gil@artica.es>

	* operation/inventories/inventory_detail.php: Fixed bug: show
	custom fields when user only has read permissions.

2013-05-29  Sancho Lerena <slerena@artica.es>

	* godmode/setup/setup_mail.php: Added a few hints on server setup.

	* godmode/usuarios/lista_usuarios.php: Fixed a SQL search syntax.

	* include/integria_cron.php: Fixed bad call to imap connect method.
	Now processed message are deleted.

	* include/functions_pop3.php: Fixed SQL insertion to create incident.

2013-05-28  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_inventory: Added a function that check if a value
	coincide with any unique value.
	
	* operation/projects/project_detail: Fixed a validation error.
	
	* operation/invoices/invoices: Added date picker.
	
	* operation/invoices/invoice_detail: Fixed date picker.
	
	* include/js: Added the migrate plugin temporarily

2013-05-28  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_inventories.php
	  include/ajax/inventories.php
	  operation/inventories/inventory_contacts.php
	  operation/inventories/inventory_detail.php
	  operation/inventories/inventory_relationship.php
	  operation/inventories/inventory_search.php
	  operation/inventories/inventory_tracking.php: Added inventories acls.
	  

2013-05-27  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* godmode/usuarios/role_manager: Added trim to role and cost.
	Added validation to role: required and ajax check for avoid duplicates.
	Fixed an error which made impossible to delete roles.
	